ParLang.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module ParLang where
import AbsLang
import LexLang
import ErrM

}

%name pExp Exp
%name pExp1 Exp1
%name pExp2 Exp2
%name pDef Def
%name pListDef ListDef
-- no lexer declaration
%monad { Err } { thenM } { returnM }
%tokentype {Token}
%token
  '(' { PT _ (TS _ 1) }
  ')' { PT _ (TS _ 2) }
  '*' { PT _ (TS _ 3) }
  '+' { PT _ (TS _ 4) }
  ',' { PT _ (TS _ 5) }
  '-' { PT _ (TS _ 6) }
  '/' { PT _ (TS _ 7) }
  '=' { PT _ (TS _ 8) }
  L_integ  { PT _ (TI $$) }
  L_ident  { PT _ (TV $$) }

%%

Integer :: { Integer }
Integer  : L_integ  { (read ( $1)) :: Integer }

Ident   :: { Ident }
Ident    : L_ident  { Ident $1 }

Exp :: { Exp }
Exp : Exp '+' Exp1 { AbsLang.EAdd $1 $3 }
    | Exp '-' Exp1 { AbsLang.ESub $1 $3 }
    | Exp1 { $1 }
Exp1 :: { Exp }
Exp1 : Exp1 '*' Exp2 { AbsLang.EMul $1 $3 }
     | Exp1 '/' Exp2 { AbsLang.EDiv $1 $3 }
     | Exp2 { $1 }
Exp2 :: { Exp }
Exp2 : Integer { AbsLang.EInt $1 }
     | Ident { AbsLang.EVar $1 }
     | '(' Exp ')' { $2 }
Def :: { Def }
Def : Ident '=' Exp { AbsLang.Def $1 $3 }
ListDef :: { [Def] }
ListDef : {- empty -} { [] }
        | Def { (:[]) $1 }
        | Def ',' ListDef { (:) $1 $3 }
{

returnM :: a -> Err a
returnM = return

thenM :: Err a -> (a -> Err b) -> Err b
thenM = (>>=)

happyError :: [Token] -> Err a
happyError ts =
  Bad $ "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ id(prToken t) ++ "'"

myLexer = tokens
}
